--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <style>
+      model-viewer {
+        width: 150px;
+        height: 150px;
+      }
+    </style>
+  </head>
+  <body>
+    {{ content }}
+  </body>
+</html>
