--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,12 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>{{ page.title }}</title>
+
+    <!-- Import du script model-viewer -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
     <style>
       model-viewer {
         width: 150px;
